--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.3.1",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.28.1",
